// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sheet Component > Sheet Snapshots > should match snapshot with custom content 1`] = `
<div>
  <div
    data-testid="sheet-root"
  >
    <button
      data-testid="sheet-trigger"
    >
      Custom Trigger
    </button>
    <div
      data-testid="sheet-portal"
    >
      <div
        class="fixed inset-0 z-50 data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0"
        data-testid="sheet-overlay"
      />
      <div
        class="fixed z-50 gap-4 bg-background p-6 shadow-lg transition ease-in-out data-[state=closed]:duration-300 data-[state=open]:duration-500 data-[state=open]:animate-in data-[state=closed]:animate-out inset-y-0 right-0 h-full w-3/4 border-l data-[state=closed]:slide-out-to-right data-[state=open]:slide-in-from-right sm:max-w-sm"
        data-testid="sheet-content"
      >
        <button
          class="absolute right-4 top-4 rounded-sm opacity-70 ring-offset-background transition-opacity hover:opacity-100 focus:outline-none  disabled:pointer-events-none data-[state=open]:bg-secondary"
          data-testid="sheet-close-button"
        >
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
        <div
          class="flex flex-col space-y-2 text-center sm:text-left"
        >
          <div
            class="text-lg font-semibold text-foreground"
            data-testid="sheet-title"
          >
            Custom Title
          </div>
          <div
            class="text-sm text-muted-foreground"
            data-testid="sheet-description"
          >
            Custom Description
          </div>
        </div>
        <div>
          Custom Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sheet Component > Sheet Snapshots > should match snapshot with custom side 1`] = `
<div>
  <div
    data-testid="sheet-root"
  >
    <button
      data-testid="sheet-trigger"
    >
      Open Sheet
    </button>
    <div
      data-testid="sheet-portal"
    >
      <div
        class="fixed inset-0 z-50 data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0"
        data-testid="sheet-overlay"
      />
      <div
        class="fixed z-50 gap-4 bg-background p-6 shadow-lg transition ease-in-out data-[state=closed]:duration-300 data-[state=open]:duration-500 data-[state=open]:animate-in data-[state=closed]:animate-out inset-y-0 left-0 h-full w-3/4 border-r data-[state=closed]:slide-out-to-left data-[state=open]:slide-in-from-left sm:max-w-sm"
        data-testid="sheet-content"
      >
        <button
          class="absolute right-4 top-4 rounded-sm opacity-70 ring-offset-background transition-opacity hover:opacity-100 focus:outline-none  disabled:pointer-events-none data-[state=open]:bg-secondary"
          data-testid="sheet-close-button"
        >
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
        <div
          class="flex flex-col space-y-2 text-center sm:text-left"
        >
          <div
            class="text-lg font-semibold text-foreground"
            data-testid="sheet-title"
          >
            Sheet Title
          </div>
          <div
            class="text-sm text-muted-foreground"
            data-testid="sheet-description"
          >
            Sheet Description
          </div>
        </div>
        <div>
          Content
        </div>
        <div
          class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2"
        >
          <button
            data-testid="sheet-close-button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sheet Component > Sheet Snapshots > should match snapshot with default props 1`] = `
<div>
  <div
    data-testid="sheet-root"
  >
    <button
      data-testid="sheet-trigger"
    >
      Open Sheet
    </button>
    <div
      data-testid="sheet-portal"
    >
      <div
        class="fixed inset-0 z-50 data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0"
        data-testid="sheet-overlay"
      />
      <div
        class="fixed z-50 gap-4 bg-background p-6 shadow-lg transition ease-in-out data-[state=closed]:duration-300 data-[state=open]:duration-500 data-[state=open]:animate-in data-[state=closed]:animate-out inset-y-0 right-0 h-full w-3/4 border-l data-[state=closed]:slide-out-to-right data-[state=open]:slide-in-from-right sm:max-w-sm"
        data-testid="sheet-content"
      >
        <button
          class="absolute right-4 top-4 rounded-sm opacity-70 ring-offset-background transition-opacity hover:opacity-100 focus:outline-none  disabled:pointer-events-none data-[state=open]:bg-secondary"
          data-testid="sheet-close-button"
        >
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
        <div
          class="flex flex-col space-y-2 text-center sm:text-left"
        >
          <div
            class="text-lg font-semibold text-foreground"
            data-testid="sheet-title"
          >
            Sheet Title
          </div>
          <div
            class="text-sm text-muted-foreground"
            data-testid="sheet-description"
          >
            Sheet Description
          </div>
        </div>
        <div>
          Content
        </div>
        <div
          class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2"
        >
          <button
            data-testid="sheet-close-button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
